# hermes

./: .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.dev.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
config/: allowed_emails.txt  mosquitto.conf
docs/contracts/: API_CONTRACT.md  BUG_DECISION_LOG.md  CONFIG_CATALOG.md  DATABASE_CONTRACT.md  EVENT_DETECTION_CONTRACT.md  GOLDEN_TRAFFIC_PLAN.md  HARDWARE_INTERFACE.md  INGESTION_PIPELINE.md  WORKER_PROTOCOL.md
docs/customer/: INTEGRATION_GUIDE.md
docs/design/: ARCHITECTURE.md  DATABASE_REDESIGN.md  DATABASE_SCHEMA.md  MULTI_SHARD.md  REST_API.md
docs/guides/: BACKEND.md  CONFIGURATION.md  DEVELOPMENT.md  EVENTS.md  METRICS.md  TESTING.md  UI.md  WORKFLOW.md
docs/operations/: INSTALLATION.md
docs/reference/: README.md
docs/reference/legacy/: modbus.md
docs/reference/ops/: ops_files.md
docs/reference/scripts/: root_scripts.md
docs/reference/static/: static_assets.md
docs/reference/templates/: config_templates.md  device_detail.md  event_config.md  other_templates.md
docs/reference/tests/: tests_catalog.md
migrations/: 0001_init_extensions.sql  0002_core_tables.sql  0003_hypertables.sql  0004_triggers.sql  0005_retention_policies.sql  README.md
packaging/: Dockerfile  README.md  build-offline-bundle.sh  docker-compose.prod.yml  install.sh  release-notes.sh  uninstall.sh
packaging/debian/: changelog  control  copyright  install  postinst  postrm  rules
packaging/debian-backend/: changelog  control  copyright  install  postinst  postrm  rules
packaging/nginx/: hermes.conf
packaging/systemd/: hermes-api.service  hermes-ingest.service  hermes-ingest@.service  hermes.target
scripts/: db-migrate.sh  dev-down.sh  dev-up.sh
services/hermes/: __init__.py  config.py  logging.py  metrics.py
tests/: __init__.py  conftest.py
tests/bench/: test_throughput.py
tests/golden/: README.md  _generate.py  conftest.py  harness.py  test_synthetic_corpora.py
tests/integration/: __init__.py  conftest.py  test_auth_flow.py  test_config_api.py  test_config_overrides_api.py  test_devices.py  test_event_persistence.py  test_events_api.py  test_events_export.py  test_migrations.py  test_modbus_poller.py  test_mqtt_brokers_api.py  test_offsets_api.py  test_packages_api.py  test_session_samples_writer.py  test_sessions_api.py  test_system_tunables_api.py
tests/unit/: __init__.py  test_auth_helpers.py  test_clock.py  test_config.py  test_consume_shard.py  test_db_config_scope_walk.py  test_detection_engine.py  test_encoding.py  test_engine_mode_gating.py  test_health.py  test_live_data.py  test_metrics.py  test_metrics_endpoint.py  test_modbus_config.py  test_mode_switching.py  test_mqtt_event_sink.py  test_offsets.py  test_parser.py  test_secret_box.py  test_session_samples_writer.py  test_shard_config.py  test_sliding_window.py  test_ttl_gate.py  test_type_a.py  test_type_b.py  test_type_c.py  test_type_d.py  test_window_buffer.py
ui/: .gitignore  README.md  package.json  pnpm-lock.yaml  postcss.config.js  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
ui/src/: app.css  app.d.ts  app.html
(+73 files in other folders)
