[project]
name = "hermes"
version = "0.1.0a20"
description = "HERMES sensor dashboard — industrial STM32 monitoring, detection engine, and operator UI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "EmbedSquare" }]

dependencies = [
  # Web framework
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "python-multipart>=0.0.17",
  "pydantic[email]>=2.9",
  "pydantic-settings>=2.6",
  # Database
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30",
  "alembic>=1.14",
  # Auth
  "argon2-cffi>=23.1",
  "pyjwt>=2.10",
  # Symmetric at-rest encryption (Fernet) for stored secrets like the
  # MQTT broker password. Key is derived from HERMES_JWT_SECRET with a
  # domain separator — see services/hermes/auth/secret_box.py.
  "cryptography>=43.0",
  # MQTT
  "paho-mqtt>=2.1",
  # JSON — orjson is the production JSON path (3-5x faster than stdlib
  # json on the 2 000 msg/s ingest hot path). Stdlib json is still used
  # in non-hot-path code where the speed doesn't matter (e.g. test
  # fixtures, ad-hoc tooling).
  "orjson>=3.10",
  # Observability
  "structlog>=24.4",
  "prometheus-client>=0.21",
  # Email (OTP)
  "aiosmtplib>=3.0",
  # Time
  "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6.0",
  "pytest-mock>=3.14",
  "httpx>=0.27",
  "hypothesis>=6.115",
  "ruff>=0.7",
  "mypy>=1.13",
  "types-python-dateutil>=2.9",
]

[project.scripts]
hermes-api     = "hermes.api.__main__:main"
hermes-ingest  = "hermes.ingest.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["services/hermes"]

[tool.hatch.build.targets.sdist]
include = ["services/hermes", "migrations", "README.md"]

[tool.pytest.ini_options]
pythonpath   = ["services"]
testpaths    = ["tests"]
addopts      = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
markers = [
  "slow: marks tests as slow (deselect with -m 'not slow')",
  "db: integration tests that hit a real Postgres",
  "mqtt: tests that require a Mosquitto broker",
  "bench: synthetic-load throughput benchmark (deselected by default)",
]

[tool.ruff]
target-version = "py311"
line-length    = 100
src            = ["services", "tests"]

[tool.ruff.lint]
select = [
  "E", "F", "W",    # pycodestyle + pyflakes
  "I",              # isort
  "B",              # bugbear
  "UP",             # pyupgrade
  "SIM",            # simplify
  "ASYNC",          # async best practices
  "RET",            # return hygiene
  "PIE",            # misc
  "N",              # naming
]
ignore = ["E501"]   # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
python_version        = "3.11"
strict                = true
warn_unreachable      = true
warn_redundant_casts  = true
warn_unused_ignores   = true
disallow_untyped_defs = true
mypy_path             = "services"
packages              = ["hermes"]

[[tool.mypy.overrides]]
module = "paho.mqtt.*"
ignore_missing_imports = true

[tool.coverage.run]
source = ["services/hermes"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]
